--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
-pyrogram==1.2.9
-tgcrypto==1.2.2
-yt-dlp==2021.10.10
-youtube-dl==2021.6.6
-APScheduler==3.7.0
-beautifultable==1.0.1
-ffmpeg-python==0.2.0
-
-supervisor
-tgbot-ping
-fakeredis
-filetype
-redis
+aiohttp
 requests
-tqdm
+youtube-dl
+git+git://github.com/google/chatbase-python.git
+https://github.com/pyrogram/pyrogram/archive/asyncio.zip
+Pillow
+hachoir
+numpy
+beautifulsoup4
